@@ -1,6 +1,7 @@
 uoamhub (0.9.2) unstable; urgency=low
 
   * one bit flags are unsigned
+  * fixed waitpid() call, don't reuse variable
 
  --
 
